--- a/mobile/index.html
+++ b/mobile/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Socket.IO Chat Example</title>
-    <link rel="stylesheet" href="public/style.css">
+    <link rel="stylesheet" href="mobile/style.css">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
         </li>
         <li class="login page">
             <div class="form">
-                <h3 class="title">What's your nickname (desktop)?</h3>
+                <h3 class="title">What's your nickname (mobile)?</h3>
                 <input class="usernameInput" type="text" maxlength="14" />
             </div>
         </li>
@@ -25,7 +25,7 @@
 
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
-    <script src="public/main.js"></script>
+    <script src="mobile/main.js"></script>
 </body>
 
 </html>
