--- a/desktop/index.html
+++ b/desktop/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Socket.IO Chat Example</title>
-    <link rel="stylesheet" href="public/style.css">
+    <link rel="stylesheet" href="desktop/style.css">
 </head>
 
 <body>
@@ -25,7 +25,7 @@
 
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
-    <script src="public/main.js"></script>
+    <script src="desktop/main.js"></script>
 </body>
 
 </html>
