--- a/desktop/index.html
+++ b/desktop/index.html
@@ -3,27 +3,33 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Socket.IO Chat Example</title>
+    <title>Mobile interface</title>
     <link rel="stylesheet" href="desktop/style.css">
 </head>
 
 <body>
-    <ul class="pages">
-        <li class="chat page">
-            <div class="chatArea">
-                <ul class="messages"></ul>
+    <div id="app">
+        <div v-if="notConnected" class="page connect">
+            <h3 class="title">Please, enter you id</h3>
+            <input class="input" type="text" maxlength="7" v-model="groupId" @input="changeGroupId" />
+        </div>
+        <div v-else class="page control">
+            <div class="buttons">
+                <div class="top">
+                    <div class="button"></div>
+                </div>
+                <div class="middle">
+                    <div class="button right"></div>
+                    <div class="button left"></div>
+                </div>
+                <div class="bottom">
+                    <div class="button"></div>
+                </div>
             </div>
-            <input class="inputMessage" placeholder="Type here..." />
-        </li>
-        <li class="login page">
-            <div class="form">
-                <h3 class="title">What's your nickname (desktop)?</h3>
-                <input class="usernameInput" type="text" maxlength="14" />
-            </div>
-        </li>
-    </ul>
+        </div>
+    </div>
 
-    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="desktop/vue.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
     <script src="desktop/main.js"></script>
 </body>
