--- a/mobile/index.html
+++ b/mobile/index.html
@@ -16,20 +16,20 @@
         <div v-else class="page control">
             <div class="buttons">
                 <div class="top">
-                    <div class="button up"></div>
+                    <div class="button" @click="up"></div>
                 </div>
                 <div class="middle">
-                    <div class="button right"></div>
-                    <div class="button left"></div>
+                    <div class="button left" @click="left"></div>
+                    <div class="button right" @click="right"></div>
                 </div>
                 <div class="bottom">
-                    <div class="button down"></div>
+                    <div class="button" @click="down"></div>
                 </div>
             </div>
         </div>
     </div>
 
-    <script src="https://unpkg.com/vue@2.5.17/dist/vue.js"></script>
+    <script src="mobile/vue.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
     <script src="mobile/main.js"></script>
 </body>
