fix mobile style

--- a/mobile/index.html
+++ b/mobile/index.html
@@ -16,14 +16,14 @@
         <div v-else class="page control">
             <div class="buttons">
                 <div class="top">
-                    <div class="button" @click="up"></div>
+                    <div class="button up arrow" @click="up"></div>
                 </div>
                 <div class="middle">
-                    <div class="button left" @click="left"></div>
-                    <div class="button right" @click="right"></div>
+                    <div class="button left arrow" @click="left"></div>
+                    <div class="button right arrow" @click="right"></div>
                 </div>
                 <div class="bottom">
-                    <div class="button" @click="down"></div>
+                    <div class="button down arrow" @click="down"></div>
                 </div>
             </div>
         </div>
