--- a/desktop/index.html
+++ b/desktop/index.html
@@ -1,37 +1,72 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <title>Mobile interface</title>
-    <link rel="stylesheet" href="desktop/style.css">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+
+    <meta name=description content="Snake game.">
+    <meta name=viewport content="width=device-width; initial-scale=1;  maximum-scale=1.0; user-scalable=0;">
+
+    <link href="https://fonts.googleapis.com/css?family=Londrina+Solid|VT323" rel="stylesheet">
+
+    <script type="text/javascript" src="desktop/js/jquery-3.1.1.min.js"></script>
+
+    <title>Snake - Game</title>
+
+    <style type="text/css">
+        * {
+            margin: 0px;
+            padding: 0px;
+        }
+
+        body {
+            text-align: center;
+            background: #245425;
+            color: #fafafa;
+        }
+
+        .game {
+            margin-top: 25px;
+            display: inline-block;
+            border: 10px solid #378239;
+            border-radius: 10px;
+            box-shadow: 0px 0px 15px 0px rgba(5, 53, 6, 0.4);
+        }
+
+        .gameIframe {
+            border: 0px;
+            display: block;
+            margin: auto;
+        }
+    </style>
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+            var gameIframe = document.getElementById('gameIframe');
+
+            var w = window.innerWidth;
+            var h = window.innerHeight;
+
+            if (h < 800) {
+                gameIframe.width = 500;
+                gameIframe.height = 300;
+            }
+
+            if (w <= 770) {
+                gameIframe.width = 600;
+            }
+
+            if (w <= 600) {
+                gameIframe.width = 275;
+            }
+        });
+    </script>
 </head>
 
 <body>
-    <div id="app">
-        <div v-if="notConnected" class="page connect">
-            <h3 class="title">Please, enter you id</h3>
-            <input class="input" type="text" maxlength="7" v-model="groupId" @input="changeGroupId" />
-        </div>
-        <div v-else class="page control">
-            <div class="buttons">
-                <div class="top">
-                    <div class="button"></div>
-                </div>
-                <div class="middle">
-                    <div class="button right"></div>
-                    <div class="button left"></div>
-                </div>
-                <div class="bottom">
-                    <div class="button"></div>
-                </div>
-            </div>
-        </div>
+    <div class="game">
+        <iframe src="desktop/game.html" id="gameIframe" class="gameIframe" width="800" height="600"></iframe>
     </div>
-
-    <script src="desktop/vue.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
-    <script src="desktop/main.js"></script>
 </body>
 
 </html>
