--- a/mobile/index.html
+++ b/mobile/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <title>Mobile interface</title>
     <link rel="stylesheet" href="mobile/style.css">
 </head>
