add second player

--- a/mobile/index.html
+++ b/mobile/index.html
@@ -35,7 +35,7 @@
         </div>
 
         <div v-if="gameOver" class="page over" @click="start">
-            <span>You lose</span>
+            <span>You {{gameOverText}}</span>
         </div>
     </div>
 
