--- a/mobile/index.html
+++ b/mobile/index.html
@@ -18,7 +18,7 @@
 
         <div v-if="!notConnected && !gameOver" class="page control">
             <div class="pause">
-                <div class="button" @click="pause"></div>
+                <div class="button arrow" @click="pause"></div>
             </div>
             <div class="buttons">
                 <div class="top">
