--- a/desktop/index.html
+++ b/desktop/index.html
@@ -21,16 +21,20 @@
 
         body {
             text-align: center;
-            background: #245425;
+            background: #400040;
             color: #fafafa;
+            width: 100vw;
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
         .game {
             margin-top: 25px;
             display: inline-block;
-            border: 10px solid #378239;
             border-radius: 10px;
-            box-shadow: 0px 0px 15px 0px rgba(5, 53, 6, 0.4);
+            box-shadow: 0px 0px 35px 30px #793979, inset 0px 0px 5px 5px #793979;
         }
 
         .gameIframe {
